--- a/src/app/Contacts.css
+++ b/src/app/Contacts.css
@@ -1,13 +1,12 @@
-.about {
-  display: flex;
-  padding-left: 25%;
-  padding-right: 25%;
-  align-items: center;
-  color: #ffffff;
-  margin: auto;
-
+.contacts {
+  height: 500;
+  background-color: aqua;
+  color: black;
+  padding-left: 20%;
+  padding-right: 20%;
+  justify-content: center;
 }
-.title {
+.text {
   padding-left: 15%;
   padding-right: 15%;
   font-size: xx-large;
@@ -17,4 +16,3 @@
   margin-left: auto;
   margin-right: auto;
 }
-
