--- a/src/app/Hero.css
+++ b/src/app/Hero.css
@@ -1,4 +1,29 @@
 .hero {
+  display: flex;
   padding-left: 15%;
   padding-right: 15%;
+  justify-content: center;
+  align-items: center;
+  background-color: beige;
+  height: 500px;
+  object-fit: cover;
+}
+.middle-photo-container {
+}
+.middle-photo {
+  height: 300;
+  width: 300;
+  background-color: yellow;
+border-radius: 50%;
+  margin: 0;
+}
+.left-text {
+  font-size: 35;
+  color: black;
+  padding: 30;
+}
+.right-text {
+  font-size: 20;
+  color: black;
+  padding: 30;
 }
