Projects component completed

--- a/src/app/Header.css
+++ b/src/app/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #FFF7F4;
     color: #fff;
     padding-left: 15%;
     padding-right: 15%;
