--- a/src/app/Navbar.css
+++ b/src/app/Navbar.css
@@ -1,59 +1,83 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items:center;
-    background-color: #595959;
-    color: #fff;
-    width: 100%;
-    padding: 1rem;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #FFF7F4;
+  color: #fff;
+  width: 100%;
+  padding: 1rem;
+  border-bottom: 2px solid black;
+
+}
+.nav-link-item {
+  cursor: pointer;
+  scale: 1;
+  color: black;
+  font-weight: bold;
+  transition-duration:  250ms;
+
+}
+.nav-link-item:hover {
+  color: black;
+  scale: 1.2 ;
+}
+.navbar-left .logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+}
+.navbar-left img {
+  width: 50;
+  aspect-ratio: 1/1;
+  scale: 1;
+  transition: all;
+  transition-duration: 300ms;
+}
+.navbar-left img:hover {
+  scale: 1.2;
+  rotate: 360deg;
   
-  .navbar-left .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .navbar-center .nav-links {
-    list-style-type: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-    background-color: #595959;
-    width: 100%;
-    padding-right: 100;
-  }
-  
-  .navbar-center .nav-links li {
-    margin-right: 1rem;
-  }
-  
-  .navbar-center .nav-links a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .navbar-right {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-right .cart-icon,
-  .navbar-right .user-icon {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 1rem;
-    position: relative;
-  }
-  
-  .navbar-right .cart-count {
-    background-color: #f44336;
-    color: #fff;
-    border-radius: 50%;
-    padding: 0.2rem 0.5rem;
-    font-size: 0.8rem;
-    position: absolute;
-    top: -0.5rem;
-    right: -0.5rem;
-  }
+}
+.navbar-center .nav-links {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  background-color: #FFF7F4;
+  width: 100%;
+  padding-right: 100;
+}
+
+.navbar-center .nav-links li {
+  margin-right: 1rem;
+}
+
+.navbar-center .nav-links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.navbar-right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-right .cart-icon,
+.navbar-right .user-icon {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 1rem;
+  position: relative;
+}
+
+.navbar-right .cart-count {
+  background-color: #FFF7F4;
+  color: #fff;
+  border-radius: 50%;
+  padding: 0.2rem 0.5rem;
+  font-size: 0.8rem;
+  position: absolute;
+  top: -0.5rem;
+  right: -0.5rem;
+}
