--- a/src/app/AboutMe.css
+++ b/src/app/AboutMe.css
@@ -2,19 +2,25 @@
   display: flex;
   padding-left: 25%;
   padding-right: 25%;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  
   align-items: center;
-  color: #ffffff;
+  text-align: center;
+  color: #000000;
   margin: auto;
-
+  border-bottom: 3px solid black;
 }
 .title {
   padding-left: 15%;
   padding-right: 15%;
+  padding-top: 12px;
   font-size: xx-large;
   font-weight: bold;
   text-align: center;
   font-size: 50;
   margin-left: auto;
   margin-right: auto;
+  color: #000000;
+  border-top: 3px solid black;
 }
-
