--- a/src/app/Card.css
+++ b/src/app/Card.css
@@ -1,11 +1,18 @@
 .card{
-    border: 1px solid hsl(0, 0%, 80%);
-    border-radius: 10px;
-    box-shadow: 5px,5px,5px hsla(0, 0%, 0%, 0.1);
-    padding: 20px;
     margin: 10px;
     text-align: center;
     max-width: 250px;
-    display: inline-block;
-    
+    display: flex;
+    width: 40px;
+    height: 40px;
+    justify-content: center;
+    transition-duration:  250ms;
+
+}
+.card-image{
+    justify-content: center;
+    align-items: center;
+}
+.card:hover{
+    scale: 1.3;
 }
