--- a/src/app/Contacts.css
+++ b/src/app/Contacts.css
@@ -1,18 +1,28 @@
 .contacts {
-  height: 500;
-  background-color: aqua;
+  height: 300px;
+  background-color: #fff7f4;
   color: black;
   padding-left: 20%;
   padding-right: 20%;
+  padding-top: 60px;
+  padding-bottom: 48px;
+  justify-content: center;
+  border: #fff7f4;
+  border-bottom: 3px solid black;
+}
+.card-area {
+  display: flex;
   justify-content: center;
 }
 .text {
+  border-top: 3px solid black;
+
   padding-left: 15%;
   padding-right: 15%;
+  padding-top: 24px;
   font-size: xx-large;
   font-weight: bold;
   text-align: center;
   font-size: 50;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
