--- a/src/app/Hero.css
+++ b/src/app/Hero.css
@@ -2,28 +2,35 @@
   display: flex;
   padding-left: 15%;
   padding-right: 15%;
+  padding-top: 24px;
+  padding-bottom: 24px;
   justify-content: center;
   align-items: center;
-  background-color: beige;
-  height: 500px;
+  background-color: #FFF7F4;
+  height: 450px;
   object-fit: cover;
+  gap: 20px;
 }
 .middle-photo-container {
+ height: 80%;
 }
 .middle-photo {
-  height: 300;
-  width: 300;
-  background-color: yellow;
-border-radius: 50%;
-  margin: 0;
+display: block;
+width: auto;
+height: 100%;
 }
 .left-text {
   font-size: 35;
   color: black;
-  padding: 30;
 }
 .right-text {
   font-size: 20;
   color: black;
-  padding: 30;
+}
+.hero-text{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  padding-bottom: 24px;
 }
