--- a/src/app/Navbar.css
+++ b/src/app/Navbar.css
@@ -28,7 +28,7 @@
   text-decoration: none;
 }
 .navbar-left img {
-  width: 50;
+  width: 50px;
   aspect-ratio: 1/1;
   scale: 1;
   transition: all;
